# realtime_results_scraper

./: .gitignore  Cargo.toml  LICENSE  NEXT.md  README.md
src/: event_handler.rs  lib.rs  main.rs  meet_handler.rs  metadata.rs  output.rs  page_handler.rs  relay_handler.rs  utils.rs
tests/: ncaa_parsing_tests.rs
