[package]
name = "realtime_results_scraper"
version = "0.1.0"
edition = "2021"
authors = ["Chris Harig"]
description = "Script to scrape realtime results html pages."
license = "MIT"
repository = "https://github.com/ChrisHarig/realtime_results_scraper"
readme = "README.md"
keywords = ["swimming", "scraper", "hytek", "results", "parser"]

[lib]
name = "realtime_results_scraper"
path = "src/lib.rs"

[[bin]]
name = "realtime_results_scraper"
path = "src/main.rs"

[dependencies]
scraper = "0.18"
reqwest = "0.11"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
